# hiking-agent

./: .gitignore  QUICKSTART.md  README.md  env.example  pyproject.toml  requirements.txt
config/: config.yaml  models.yaml
docs/: README.md
hikebutler/: __init__.py  main.py  state.py
hikebutler/config/: __init__.py  loader.py
hikebutler/database/: __init__.py  chromadb_client.py  mysql_client.py
hikebutler/graph/: __init__.py  workflow.py
hikebutler/memory/: __init__.py  mem0_client.py
hikebutler/models/: __init__.py  embedding_factory.py  llm_factory.py
hikebutler/nodes/: __init__.py  fusion_node.py  gear_node.py  photo_plan_node.py  post_gen_node.py  route_node.py  weather_node.py  xhs_node.py
hikebutler/tools/: __init__.py  mcp_tools.py
hikebutler/ui/: __init__.py  gradio_app.py
scripts/: CHROMADB_ISSUE.md  __init__.py  diagnose_chromadb.py  init_db.py  verify_chromadb.py
tests/: test_config_loader.py  test_nodes.py  test_state.py
